objects/User.object
<CustomObject>
    <fields>
        <fullName>ARC_User_Type__c</fullName>
        <label>ARC User Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Division Scheduler</fullName>
                </value>
                <value>
                    <fullName>Secondary Scheduler</fullName>
                </value>
                <value>
                    <fullName>Read Only Scheduler</fullName>
                </value>
                <value>
                    <fullName>Resource</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Accepted_Community_Terms__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accepted Community Terms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Chat_Name__c</fullName>
        <label>Chat Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is utilized to support the data migration process.  It will contain a combination of the source system identifier and the source system&apos;s unique record identifier.  This field should be deleted after all migration activities are complete.</description>
        <externalId>true</externalId>
        <inlineHelpText>This field is utilized to support the data migration process.  It will contain a combination of the source system identifier and the source system&apos;s unique record identifier.  This field should be deleted after all migration activities are complete.</inlineHelpText>
        <label>DM External Id</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Deactivated_Date__c</fullName>
        <description>Date user was deactivated</description>
        <inlineHelpText>This field is automatically filled out based on the date the &apos;Active&apos; box is unchecked.</inlineHelpText>
        <label>Deactivated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employee_ID__c</fullName>
        <externalId>true</externalId>
        <label>Employee ID</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LMS_ID__c</fullName>
        <description>This field is the LMS Id of the user if user exists on LMS system</description>
        <label>LMS ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Role__c</fullName>
        <description>This field is used for old role mapping which are used in call conversation report for Pam Malena</description>
        <formula>CASE( UserRole.Name, 

&quot;ASG (Aquatics)&quot;, &quot;Back Office Agent Role&quot;, 

&quot;CCO&quot;, &quot;Back Office Agent Role&quot;, 

&quot;CERT&quot;, &quot;Back Office Agent Role&quot;, 

&quot;CST&quot;, &quot;Back Office Agent Role&quot;, 

&quot;ISG&quot;, &quot;Back Office Agent Role&quot;, 

&quot;RDC&quot;, &quot;Back Office Agent Role&quot;, 

&quot;Trainer&quot;, &quot;Back Office Agent Role&quot;, 

&quot;PRT Group&quot;, &quot;Back Office Agent Role&quot;, 

&quot;Front Office At Home Agent Role&quot;, &quot;At Home Agent Role&quot;,

&quot;TSC Management&quot;, &quot;Training Support Center&quot;,

&quot;Training Support QA&quot;, &quot;Training Support Center&quot;,

&quot;Font Office Uniontown - ATG&quot;, &quot;Front Office Uniontown Agent Role&quot;,

&quot;Front Office - Chat Agent&quot;, &quot;Chat Agent Role&quot;,


UserRole.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Legacy Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Name__c</fullName>
        <description>Formula is used to display the Manager Name optionally in reports. Salesforce out of box reports do not allow reporting on the Manager Name.</description>
        <formula>Manager.FirstName &amp; &apos; &apos; &amp; Manager.LastName</formula>
        <inlineHelpText>Formula is used to display the Manager Name optionally in reports. Salesforce out of box reports do not allow reporting on the Manager Name.</inlineHelpText>
        <label>Manager Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Match_Status__c</fullName>
        <description>This is a temporary field used to reconcile users between the training and production environments.  This field should be deleted after all initial users are reconciled and loaded into production.</description>
        <inlineHelpText>This is a temporary field used to reconcile users between the training and production environments.  This field should be deleted after all initial users are reconciled and loaded into production.</inlineHelpText>
        <label>Match Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Matched</fullName>
                </value>
                <value>
                    <fullName>Training Only</fullName>
                </value>
                <value>
                    <fullName>Prod Only</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PHSS_IC_Email__c</fullName>
        <formula>IF(  Id = $User.Id ,
     Email, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PHSS_IC_Name__c</fullName>
        <formula>IF( Id = $User.Id , 
FirstName &amp; &quot; &quot; &amp; LastName, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PHSS_IC_Username__c</fullName>
        <formula>IF( Id = $User.Id , 
Username, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Username</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Real_Email__c</fullName>
        <description>Real email address of user. Derived by removing the extra environment suffix from their username.  Delete after all initial users are loaded into the environment with their correct emails.</description>
        <formula>SUBSTITUTE( Username, &apos;.phss&apos;, &apos;&apos;)</formula>
        <inlineHelpText>Real email address of user. Derived by removing the extra environment suffix from their username.  Delete after all initial users are loaded into the environment with their correct emails.</inlineHelpText>
        <label>Real Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SABA_Internal_ID__c</fullName>
        <externalId>true</externalId>
        <label>SABA Internal ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SABA_Person_Number__c</fullName>
        <externalId>true</externalId>
        <label>SABA Person Number</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Employee_Number</fullName>
        <active>true</active>
        <description>Employee number can be only edited by Lindsay Pour</description>
        <errorConditionFormula>AND(
ISCHANGED(EmployeeNumber),
$Profile.Id &lt;&gt;&apos;00ed0000000IUPl&apos;,/*System Administ + Deploy*/
$Profile.Id  &lt;&gt; &apos;00ed0000000uehO&apos;,/*System Administrator*/
$User.Id &lt;&gt; &apos;005d0000001VF7D&apos;,/*Lindsay Pour*/
$User.Id &lt;&gt; &apos;005d0000001YL4H&apos;,/*Tyson Johnson*/
$Setup.Validation_Rules__c.Bypass_Rules__c = False)</errorConditionFormula>
        <errorDisplayField>EmployeeNumber</errorDisplayField>
        <errorMessage>You do not have permission to update this field. If updates need to be performed please contact Salesforce Admin team.</errorMessage>
    </validationRules>
</CustomObject>